--- a/similarity/Cargo.toml
+++ b/similarity/Cargo.toml
@@ -1,9 +1,6 @@
 [package]
-name = "report01"
+name = "similarity"
 version = "0.1.0"
 authors = ["Elías Puma <elpumitaelias@gmail.com>"]
 
 [dependencies]
-rustc-serialize = "0.3.24"
-csv = "0.14"
-time = "*"
