--- a/slope-one/Cargo.toml
+++ b/slope-one/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Elías Puma <elpumitaelias@gmail.com>"]
 
 [dependencies]
+rustc-serialize = "0.3.24"
+csv = "0.14"
+text_io = "0.1.6"
