--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "report01/report"]
 	path = report01/report
 	url = https://git.overleaf.com/9179316zwzpyzgrjdjz
+[submodule "slope-one/report02"]
+	path = slope-one/report02
+	url = https://git.overleaf.com/9373898zrqhhqrfyccv
