--- a/libs/utilities/Cargo.toml
+++ b/libs/utilities/Cargo.toml
@@ -1,9 +1,6 @@
 [package]
-name = "database"
+name = "utilities"
 version = "0.1.0"
 authors = ["Elías Puma <elpumitaelias@gmail.com>"]
 
 [dependencies]
-rustc-serialize = "0.3.24"
-csv = "0.14"
-utilities = { path = "../utilities/" }
