--- a/libs/database/Cargo.toml
+++ b/libs/database/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Elías Puma <elpumitaelias@gmail.com>"]
 rustc-serialize = "0.3.24"
 csv = "0.14"
 utilities = { path = "../utilities/" }
+distance = { path = "../distance/" }
