--- a/libs/database/Cargo.toml
+++ b/libs/database/Cargo.toml
@@ -10,3 +10,4 @@ utilities = { path = "../utilities/" }
 distance = { path = "../distance/" }
 rand = "*"
 quick-csv = "0.1.6"
+rusty-machine="0.5.4"
