--- a/libs/database/Cargo.toml
+++ b/libs/database/Cargo.toml
@@ -10,4 +10,5 @@ utilities = { path = "../utilities/" }
 distance = { path = "../distance/" }
 rand = "*"
 quick-csv = "0.1.6"
-rusty-machine="0.5.4"
+nn = "0.1.6"
+conv = "0.3.3"
